# godot-bluetooth

./: .clang-format  .gitattributes  .gitignore  .gitmodules  AUTHORS.md  CMakeLists.txt  CONTRIBUTING.md  COPYRIGHT.txt  LICENSE  LICENSE.txt  Makefile  README.md  SConstruct  SCsub  bluetooth_module.cpp  bluetooth_module.h  config.py  register_types.cpp  register_types.h
.github/ISSUE_TEMPLATE/: bug_report.md
.github/misc/: sources.list
.github/workflows/: docs.yml  linux_builds.yml  static_checks.yml
addons/blueplug/: autoload.gd  blue_plug.gdextension  blueplug.gdextension  plugin.cfg  plugin.gd
bluetooth_module/: CMakeLists.txt  SCsub  config.py  register_types.cpp  register_types.h
bluetooth_module/doc_classes/: NetworkedMultiplayerBt.xml
bluetooth_module/src/: BluetoothModule.cpp  networked_multiplayer_bt.cpp  networked_multiplayer_bt.h
bluez_test/: Makefile
demo/: .gitignore  export_presets.cfg  project.godot
demo/addons/: blueplug
demo/assets/: Tiny_Tiny_Heroes-Animals.png.import  icon.png.import
demo/assets/airplane/: 11804_Airplane_diff.jpg.import  11804_Airplane_v2_l2.mtl  11804_Airplane_v2_l2.obj.import
demo/assets/background/: country-platform-cloud-back.png.import  country-platform-cloud-front.png.import  country-platform-cloud.png.import  country-platform-forest.png.import  country-platform-front.png.import  country-platform-mountain.png.import  country-platform.png.import
demo/assets/fonts/: Inconsolata-Regular.ttf.import
demo/scenes/: main.tscn
demo/scenes/animal_demo/: Animal.tscn  Interface.tscn  Main.tscn  animal.tscn  interface.tscn  main.tscn
demo/scenes/multiplayer/: airplane.tscn  main.tscn
demo/scripts/: Main.gd  main.gd
demo/scripts/animal_demo/: Animal.gd  Interface.gd  Main.gd  animal.gd  interface.gd  main.gd
demo/scripts/multiplayer/: airplane.gd  main.gd
demo/shaders/: wave.gdshader
demo/src/: Animal.gd  Animal.tscn  Interface.gd  Interface.tscn  Main.gd  Main.tscn  wave.gdshader
doc_classes/: Bluetooth.xml  NetworkedMultiplayerBt.xml
docs/: .gitignore  docusaurus.config.js  package.json
docs/src/: global.css
docs/src/css/: custom.css
docs/src/pages/: index.module.css  index.tsx
experiments/test_dbus/: .gitignore  Makefile
experiments/test_dbus/include/: Reception.hpp  bluetooth_wrapper.h
experiments/test_dbus/src/: bluetooth_wrapper.cpp  main.cpp
experiments/test_module/: Makefile
experiments/test_module/include/: main.h
experiments/test_module/src/: main.cpp
experiments/test_qt/: CMakeLists.txt  README.md
experiments/test_qt/src/: BluetoothModule.cpp  main.cpp
experiments/test_qt6/: .gitignore  CMakeLists.txt  README.md
experiments/test_qt6/src/: main.cpp
icons/: LICENSE
include/: BluetoothModule.hpp  DeviceDiscoveryDialog.hpp  main.hpp
rust/: .gitattributes  .gitignore  Cargo.toml  Makefile  README.md
rust/addons/blueplug/: autoload.gd  plugin.cfg  plugin.gd
rust/addons/blueplug/native/: AsyncExecutorDriver.gdns
rust/blueplug/: BluePlug.gdnlib  BluePlug.gdns  autoload.gd  plugin.gd
rust/blueplug/native/: AsyncExecutorDriver.gdns  BluePlugUtils.gdns
rust/project/: .gitignore  Main.gd  addons  project.godot
rust/project/addons/: blueplug
rust/rust/: .gitignore  Cargo.toml
rust/rust/src/: bluetooth.rs  bluetooth_module.rs  bluetooth_trait.rs  lib.rs
rust/rust/src/native_class/: async_executor_driver.rs  blueplug_utils.rs
rust/rust/src/use tokio::task::LocalSet;/: async_executor_driver.rs  mod.rs
src/: BluetoothModule.cpp  DeviceDiscoveryDialog.cpp  bluetooth_bluez.cpp  bluetooth_bluez.h  bluetooth_dummy.cpp  bluetooth_dummy.h  bluetooth_module.cpp  bluetooth_module.h  bluetooth_wrapper.h  bluez.h  gdexample.cpp  main.cpp  register_types.cpp  register_types.h
src/ble/: BLEPeripheral.h  BLEUtils.cpp  BLEUtils.h  GDSimpleBLE.cpp  GDSimpleBLE.h  company_identfiers.h  core.cpp  core.h  utils.cpp  utils.h
src/godot_binding/: BLEPeripheral.cpp  BLEPeripheral.h  BLEUtils.cpp  BLEUtils.h  blueplug.cpp  blueplug.h  blueplug_multiplayer_peer.cpp  blueplug_multiplayer_peer.h  blueplug_packet_peer.cpp  blueplug_packet_peer.h  gdexample.h  register_types.cpp  register_types.h
test_bluez/src/: main.cpp
test_qt/src/: BluetoothModule.cpp
tests/: .clang-format  .gitignore  Makefile
tests/include/: main.h
tests/src/: main.cpp
