[package]
name = "blueplug"
version = "0.1.0"
authors = ["Godot Bluetooth Module contributors"]
edition = "2021"
rust-version = "1.65"
license = "MIT"
publish = false
repository = "https://github.com/GreenDjango/godot-bluetooth"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
gdnative = "0.11.0"
btleplug = "0.10.3"