[package]
name = "blueplug"
version = "0.1.0"
authors = ["Godot Bluetooth Module contributors"]
edition = "2021"
rust-version = "1.65"
license = "MIT"
publish = false
repository = "https://github.com/GreenDjango/godot-bluetooth"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "blueplug"
crate-type = ["cdylib"]

[dependencies]
gdnative = { version = "0.11.3", features = ["async"] }
async-trait = "0.1.59"
futures = "0.3.25"
btleplug = "0.10.3"
rand = "0.8.5"
tokio = { version = "1.27", features = ["full"] } #"rt-multi-thread", 
# async-std = { version = "1", features = ["attributes", "tokio1"] }
uuid = "1.2.2"